# dq-iot-framework

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
conf/: rules.yml  thresholds.yml
notebooks/: dq_iot_framework_demo.py
src/dq_framework/: checks.py  cli.py  rules.py
tests/: test_rules.py
